--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/credential-providers": "^3.812.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
     "@mongodb-js/zstd": "^1.2.2",
     "@mui/material": "^7.1.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
@@ -33,8 +34,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2"
+    "eslint-config-next": "15.3.2",
+    "postcss": "^8.4.35"
   }
 }
